# ethminer

./: .bumpversion.cfg  .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .travis.yml  BuildInfo.h.in  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  LICENSE  README.md  appveyor.yml  circle.yml  meson.build
.github/ISSUE_TEMPLATE/: bug_report.md
cmake/: EthCheckCXXFlags.cmake  EthCompilerSettings.cmake
cmake/Hunter/: config.cmake
docs/: API_DOCUMENTATION.md  BUILD.md  POOL_EXAMPLES_ETH.md
ethminer/: CMakeLists.txt  buildinfo.h  main.cpp
libapicore/: ApiServer.cpp  ApiServer.h  CMakeLists.txt
libdevcore/: CMakeLists.txt  Common.h  CommonData.cpp  CommonData.h  FixedHash.cpp  FixedHash.h  Log.cpp
libethash-cl/: CLMiner.cpp  CLMiner.h  CMakeLists.txt  bin2h.cmake
libethash-cl/kernels/: README.md
libethash-cl/kernels/isa/: GCN3_ethash_search.isa  GCN5_ethash_search.isa  GCN_ethash_globaldata.isa
libethash-cpu/: CMakeLists.txt
libethash-cuda/: CMakeLists.txt  cuda_helper.h  dagger_shuffled.cuh  ethash_cuda_miner_kernel.cu  fnv.cuh  keccak.cuh
libethcore/: CMakeLists.txt  EthashAux.cpp  Farm.cpp  Farm.h  Miner.h
libhwmon/: CMakeLists.txt  wrapamdsysfs.cpp  wrapnvml.h
libpoolprotocols/: CMakeLists.txt  PoolClient.h  PoolManager.cpp  PoolManager.h  PoolURI.h
libpoolprotocols/getwork/: EthGetworkClient.cpp  EthGetworkClient.h
libpoolprotocols/stratum/: EthStratumClient.cpp  EthStratumClient.h
libpoolprotocols/testing/: SimulateClient.cpp  SimulateClient.h
